--- a/comlink/comlink.vcxproj
+++ b/comlink/comlink.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="comlink.h" />
+    <ClInclude Include="comlink_ex.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
