--- a/toolkit/lib/Iocomp/plot/Plot.csproj
+++ b/toolkit/lib/Iocomp/plot/Plot.csproj
@@ -28,7 +28,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="common">
-      <HintPath>..\common\bin\Release\common.dll</HintPath>
+      <HintPath>..\common\bin\Debug\common.dll</HintPath>
     </Reference>
     <Reference Include="System.Design">
       <HintPath>C:\WINDOWS\Microsoft.NET\assembly\GAC_MSIL\System.Design\v4.0_4.0.0.0__b03f5f7f11d50a3a\System.Design.dll</HintPath>
