--- a/comlink/comlink.vcxproj.filters
+++ b/comlink/comlink.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="comlink_msg.h">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="comlink.def">
