--- a/comlink/comlink.vcxproj
+++ b/comlink/comlink.vcxproj
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="comlink.cpp" />
+    <ClCompile Include="comlink_msg.cpp" />
     <ClCompile Include="comlink_msg.h" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="stdafx.cpp">
