--- a/dev_toolkit/dev_toolkit.csproj
+++ b/dev_toolkit/dev_toolkit.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="device\gnss\acc_calib.cs" />
     <Compile Include="device\gnss\dev_gnss.cs" />
     <Compile Include="device\gnss\gyro_calib.cs" />
     <Compile Include="device\gnss\gl_flush.cs" />
