--- a/dev_toolkit/dev_toolkit.csproj
+++ b/dev_toolkit/dev_toolkit.csproj
@@ -83,6 +83,7 @@
     <Compile Include="device\gnss\dev_gnss.cs" />
     <Compile Include="device\gnss\gyro_calib.cs" />
     <Compile Include="device\gnss\gl_flush.cs" />
+    <Compile Include="device\gnss\mag_calib.cs" />
     <Compile Include="dev\nav\NavBar.cs" />
     <Compile Include="dev\nav\NavMsg.cs" />
     <Compile Include="dev\nav\NavParams.cs" />
